# Loess

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  regression.py
_local_regression/: __init__.py  loess.py  regression.py  standardizer.py
docs/: .buildinfo  Loess.html  Regression.html  Standardizer.html  conf.py  genindex.html  index.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree  local_regression.doctree  loess.doctree  modules.doctree
docs/_build/html/: genindex.html  index.html  local_regression.html  loess.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  local_regression.rst.txt  loess.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_sources/: Loess.rst.txt  Regression.rst.txt  Standardizer.rst.txt  index.rst.txt
local_regression/: __init__.py  _not_fitted_error.py  _weightings.py  loess.py  regression.py  standardizer.py
loess/: NotFittedError.py  Standardizer.py  __init__.py  loess.py  regression.py  standardizer.py
tests/test_against_r/: loess_python.ipynb  loess_r.ipynb  test_loess_python.py  test_loess_r.R
tests/test_against_r/.ipynb_checkpoints/: loess_python-checkpoint.ipynb  loess_r-checkpoint.ipynb
tests/unit/: test_linear_regression.py  test_standardizer.py
