[tool.poetry]
name = "loess"
version = "0.1.0"
description = ""
authors = ["Florian Holl <florian.holl@triaz.de>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
sklearn = "^0.0"
matplotlib = "^3.5.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
