[tool.poetry]
name = "loess"
version = "1.1.0"
description = ""
authors = ["Florian Holl <florian.holl@triaz.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
sklearn = "^0.0"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
